# qtrader

./: .gitignore  .pylintrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  QUICK_TEST_GUIDE.md  README.md  TESTING.md  TEST_REPORT.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run_full_test.sh  start.sh  stop.sh  test_alarm.py  test_alarm_direct.py  test_import.py
config/: StrRsiInDay_DQ.json  account-sample.yaml  config-multi-account.yaml  config-sample.yaml  config-simple.yaml  config.yaml  strategies.yaml
data/: param_strrsi_DQ.csv
data/export/: position-DQ-2026-01-26.csv
docs/: CTP_ADAPTER_STRATEGY_SYSTEM.md  IMPLEMENTATION_STATUS.md  INIT_SYSTEM_UPDATE.md  MULTI_ACCOUNT_ARCHITECTURE.md  WEBSOCKET_OPTIMIZATION.md
src/: __init__.py  account_manager.py  app_context.py  config_loader.py  context.py  init_sys.py  job_mgr.py  main.py  param_loader.py  persistence.py  risk_control.py  run_manager.py  run_trader.py  scheduler.py  switch_mgr.py  trading_engine.py  trading_engine_gateway.py  trading_engine_old.py
src/adapters/: __init__.py  base.py  base_gateway.py  ctp_adapter.py  ctp_gateway.py  tq_gateway.py  tqsdk_adapter.py
src/api/: app.py  (+3 more)
tests/: README.md  UAT测试案例.xls  conftest.py  create_test_template.py  rotation_test_plan.md  test_examples.py  test_order_cmd.py  test_order_cmd_executor.py  test_socket_communication.py  test_socket_quick.py  test_socket_server_exception.py  test_tq.py
web/: API_TEST_REPORT.md  CHROME_DEVTOOLS_TEST_GUIDE.md  README.md  automated-test.js  index.html  package-lock.json  package.json  vite.config.ts
(+145 files in other folders)
